kubernetes/product-catalog/base/product-catalog-service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-catalog
  namespace: product-catalog
spec:
  selector:
    app: product-catalog
  type: NodePort
  ports:
    - name: product-catalog
      port: 5098
      targetPort: 5098
