kubernetes/product-catalog/base/product-catalog-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-catalog-ingress
  namespace: product-catalog
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.50.0/24, 91.207.126.100"
spec:
  rules:
  - host: product-catalog.omni-rs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: product-catalog
            port:
              number: 5098
  tls:
  - hosts:
    - product-catalog.omni-rs.com
    secretName: omni-rs-com-tls-sub
